test/for/error/for-error-step.lua
-- Errore nella sintassi del ciclo for
-- Lo step non può essere un'espressione
for i = 1, 10, i do
    print(i)
end